<?xml version="1.0" encoding="utf-8"?>
<!--
 This file is part of BioAdresar.
	Copyright 2012 Jiri Zouhar (zouhar@trilobajt.cz)

    BioAdresar is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    BioAdresar is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with BioAdresar.  If not, see <http://www.gnu.org/licenses/>.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/detailView"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical" >

                <TextView
                    android:id="@+id/header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:text="@string/about_label"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <ImageView
                    android:id="@+id/icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:src="@drawable/logo_hnuti_duha" />
            </LinearLayout>

            <TextView
                android:id="@+id/TextView03"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/alert_light_frame"
                android:gravity="center_vertical"
                android:text="@string/aboutText" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/webLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="50dip"
                    android:text="@string/web" />

                <TextView
                    android:id="@+id/webText"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:drawable/alert_light_frame"
                    android:gravity="center_vertical"
                    android:text="@string/homepage" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/emailLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="50dip"
                    android:text="@string/email" />

                <TextView
                    android:id="@+id/emailText"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:drawable/alert_light_frame"
                    android:gravity="center_vertical"
                    android:text="@string/contactMail" />
            </LinearLayout>

            <TextView
                android:id="@+id/attributionText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/alert_light_frame"
                android:gravity="center_vertical"
                android:text="@string/attribution" />

            <TextView
                android:id="@+id/licence"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/licenceLabel"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/licenceText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/alert_light_frame"
                android:gravity="center_vertical"
                android:text="@string/licence" />

            <TextView
                android:id="@+id/dataLicence"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dataLicenceLabel"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/TextView02"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/alert_light_frame"
                android:gravity="center_vertical"
                android:text="@string/dataLicence" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>