<?xml version="1.0" encoding="utf-8"?>
<!--
 This file is part of BioAdresar.
	Copyright 2012 Jiri Zouhar (zouhar@trilobajt.cz)

    BioAdresar is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    BioAdresar is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with BioAdresar.  If not, see <http://www.gnu.org/licenses/>.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <ListPreference
        android:entries="@array/activityList"
        android:entryValues="@array/activityList"
        android:key="defaultActivity"
        android:title="@string/defaultActivityLabel" />

    <EditTextPreference
        android:defaultValue="49.8142789,14.65985"
        android:key="defaultLocation"
        android:summary="@string/defaultLocationSummary"
        android:title="@string/defaultLocationLabel" />

</PreferenceScreen>